[build-system]
requires = ["setuptools>=77.0.3", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "napari-ome-zarr-navigator"
description = "A plugin to browse OME-Zarr plates by conditions and load images, labels and features from ROIs"
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Fabio Steffen", email = "fabio.steffen@uzh.ch" },
    { name = "Joel Luethi", email = "joel.luethi@uzh.ch" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: napari",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy",
    "magicgui",
    "qtpy",
    "scikit-image",
    "napari-ome-zarr",
    "ome-zarr",
    "wget",
    "ngio>=0.5",
    "numcodecs!=0.14.0,!=0.14.1", # avoids zarr issue
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/fractal-analytics-platform/napari-ome-zarr-navigator"
"Bug Tracker" = "https://github.com/fractal-analytics-platform/napari-ome-zarr-navigator/issues"
"Documentation" = "https://github.com/fractal-analytics-platform/napari-ome-zarr-navigator#README.md"
"Source Code" = "https://github.com/fractal-analytics-platform/napari-ome-zarr-navigator"
"User Support" = "https://github.com/fractal-analytics-platform/napari-ome-zarr-navigator/issues"

[project.optional-dependencies]
testing = ["tox", "pytest", "pytest-cov", "pytest-qt", "napari", "pyqt5"]

[project.entry-points."napari.manifest"]
napari-ome-zarr-navigator = "napari_ome_zarr_navigator:napari.yaml"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
napari_ome_zarr_navigator = ["napari.yaml", "icons/*.svg"]

[tool.setuptools_scm]
write_to = "src/napari_ome_zarr_navigator/_version.py"

[tool.black]
line-length = 79
target-version = ['py39', 'py310', 'py311']


[tool.ruff]
line-length = 79
select = [
    "E",
    "F",
    "W",   # flake8
    "UP",  # pyupgrade
    "I",   # isort
    "BLE", # flake8-blind-exception
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "G",   # flake8-logging-format
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long. let black handle this
    "UP006",
    "UP007",  # type annotation. As using magicgui require runtime type annotation then we disable this.
    "SIM117", # flake8-simplify - some of merged with statements are not looking great with black, reanble after drop python 3.9
    "G004",   # Logging statement uses f-string
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*vendored*",
    "*_vendor*",
]
target-version = "py39"
fix = true

[dependency-groups]
dev = ["napari[all]>=0.6.6"]

[tool.uv]
constraint-dependencies = ["npe2<0.8", "anndata>=0.12"]
